# EXPO-60-UnderwaterDrone

./: .gitignore  CMakeLists.txt  README.md  readme.txt  torpedo_main
src/: config.h  main.c
src/Debug/: logger.c  logger.h
src/common_Control/: actuator_model.c  actuator_model.h  actuators.c  actuators.h  allocator.c  allocator.h  control.c  control.h  control_types.h  telemetry.c  telemetry.h  transform.c  transform.h  vehicle_config.c  vehicle_config.h
tests/: test_allocator.c
